--- a/bICSI/build.gradle
+++ b/bICSI/build.gradle
@@ -3,19 +3,29 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 19
     buildToolsVersion "21.1.2"
-
     defaultConfig {
-        applicationId "org.bicsi.canada2015"
+        applicationId 'org.bicsi.fall2015'
         minSdkVersion 14
         targetSdkVersion 17
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
+}
+
+android {
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+    }
+}
+
+configurations {
+    all*.exclude group: 'com.facebook.android'
 }
 
 dependencies {
@@ -24,7 +34,7 @@ dependencies {
     compile files('libs/Parse-1.3.8.jar')
     compile files('libs/PushIOManager.jar')
     compile files('libs/crittercism_v4_3_0_sdkonly.jar')
-    compile files('libs/facebooksdk.jar')
+    //compile files('libs/facebooksdk.jar')
     compile files('libs/httpclient-4.0.1.jar')
     compile files('libs/libGoogleAnalyticsServices.jar')
     compile files('libs/stackmob-android-sdk-1.3.5.jar')
