--- a/bICSI/build.gradle
+++ b/bICSI/build.gradle
@@ -30,6 +30,7 @@ configurations {
 
 dependencies {
     compile project(':facebookSDK')
+    //compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.android.support:support-v4:19.1.0'
     compile files('libs/Parse-1.3.8.jar')
     compile files('libs/PushIOManager.jar')
